WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
252462
REGRESSION(
256571@main
): DrawingAreaCoordinatedGraphics should handle registering scrolling trees
https://bugs.webkit.org/show_bug.cgi?id=252462
Summary
REGRESSION(256571@main): DrawingAreaCoordinatedGraphics should handle registe...
Zan Dobersek
Reported
2023-02-16 23:50:45 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2023-02-17 00:02:58 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10258
EWS
Comment 2
2023-02-17 01:35:19 PST
Committed
260434@main
(51a23edb6b39): <
https://commits.webkit.org/260434@main
> Reviewed commits have been landed. Closing PR #10258 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-02-17 01:36:23 PST
<
rdar://problem/105589116
>
WebKit Commit Bot
Comment 4
2023-02-17 03:47:02 PST
Re-opened since this is blocked by
bug 252471
Zan Dobersek
Comment 5
2023-02-17 04:08:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10268
EWS
Comment 6
2023-02-17 10:36:03 PST
Committed
260454@main
(9789cdecc95b): <
https://commits.webkit.org/260454@main
> Reviewed commits have been landed. Closing PR #10268 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug