REGRESSION(256571@main): DrawingAreaCoordinatedGraphics should handle registering scrolling trees https://bugs.webkit.org/show_bug.cgi?id=252462

Reviewed by Carlos Garcia Campos.

Override the registerScrollingTree and unregisterScrollingTree methods on the
DrawingAreaCoordinatedGraphics, (un)registering the scrolling tree on the
associated WebPage with the WebProcess-specific EventDispatcher instance. This
enables EventDispatcher to dispatch wheel events directly against the correct
ScrollingTree, instead of diverting them to the main thread when no such
ScrollingTree is found.

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp:
(WebKit::DrawingAreaCoordinatedGraphics::registerScrollingTree):
(WebKit::DrawingAreaCoordinatedGraphics::unregisterScrollingTree):
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.h:

Canonical link: https://commits.webkit.org/260434@main